Einige Dinge gemacht um mich vor der Theorie zu drücken

--- a/header.tex
+++ b/header.tex
@@ -107,6 +107,9 @@
 % Verbesserungen am Schriftbild
 \usepackage{microtype}
 
+% Keine Einrueckungen nach Absatz
+\setlength{\parindent}{0pt}
+
 % Literaturverzeichnis
 \usepackage[
   backend=biber,
