--- a/lit.bib
+++ b/lit.bib
@@ -61,6 +61,13 @@
 	url          = {https://moodle.tu-dortmund.de/pluginfile.php/1884592/mod_resource/content/1/V206.pdf},
 }
 
+@online{v308,
+	title        = {V308 - Spulen und Magnetfelder},
+	organization = {TU Dortmund},
+	urldate      = {2021-12-15},
+	url          = {https://moodle.tu-dortmund.de/pluginfile.php/1884546/mod_resource/content/1/V308.pdf},
+}
+
 @book{Demtröder_Exp_P_1,
 	author       = {Professor Dr. Wolfgang Demtröder},
 	title        = {Experimentalphysik 1 Mechanik und Wärme},
