--- a/v308/content/auswertung.tex
+++ b/v308/content/auswertung.tex
@@ -2,11 +2,36 @@
 \label{sec:Auswertung}
 
 \begin{figure}
-  \centering
-  \includegraphics{plot.pdf}
-  \caption{Plot.}
-  \label{fig:plot}
+    \centering
+    \caption{Die Messwerte der Langenspule. Erstellt mit \textit{matplotlib} \cite{matplotlib}}
+    \label{fig:PlotLangeSpule}
+    \includegraphics[width=\textwidth]{build/plotLangeSpule.pdf}
 \end{figure}
 
+\begin{figure}
+    \centering
+    \caption{Die Messwerte des Helmholtzspulenpaars zum Abstand d = 10cm. Erstellt mit \textit{matplotlib} \cite{matplotlib}}
+    \label{fig:PlotHH1}
+    \includegraphics[width=\textwidth]{build/plotHelmHoltz1.pdf}
+\end{figure}
 
-Siehe \autoref{fig:plot}!
+\begin{figure}
+    \centering
+    \caption{Die Messwerte des Helmholtzspulenpaars zum Abstand d = 15cm. Erstellt mit \textit{matplotlib} \cite{matplotlib}}
+    \label{fig:PlotHH2}
+    \includegraphics[width=\textwidth]{build/plotHelmHoltz2.pdf}
+\end{figure}
+
+\begin{figure}
+    \centering
+    \caption{Die Messwerte des Helmholtzspulenpaars zum Abstand d = 10cm. Erstellt mit \textit{matplotlib} \cite{matplotlib}}
+    \label{fig:PlotHH3}
+    \includegraphics[width=\textwidth]{build/plotHelmHoltz3.pdf}
+\end{figure}
+
+\begin{figure}
+    \centering
+    \caption{Hysterese Kurve des Materials in der Ringspule. Erstellt mit \textit{matplotlib} \cite{matplotlib}}
+    \label{fig:PlotLangeSpule}
+    \includegraphics[width=\textwidth]{build/plotHysterese.pdf}
+\end{figure}
