--- a/v308/v308.tex
+++ b/v308/v308.tex
@@ -1,7 +1,7 @@
 \input{header.tex}
 
 \subject{V308}
-\title{TITEL}
+\title{Spulen und Magnetfelder}
 \date{%
   Durchführung: 14.12.2021
   \hspace{3em}
