DURCHFÜHRUNG NOCH NET FEDDIG ABER FALLS DU HALT ARBEITEN WILLSCHT PUSHE ICH MA BILDER AUCH DABEI

--- a/v308/content/auswertung.tex
+++ b/v308/content/auswertung.tex
@@ -32,6 +32,6 @@
 \begin{figure}
     \centering
     \caption{Hysterese Kurve des Materials in der Ringspule. Erstellt mit \textit{matplotlib} \cite{matplotlib}}
-    \label{fig:PlotLangeSpule}
+    \label{fig:PlotHysterese}
     \includegraphics[width=\textwidth]{build/plotHysterese.pdf}
 \end{figure}
