--- a/header.tex
+++ b/header.tex
@@ -99,7 +99,7 @@
 
 % Grafiken können eingebunden werden
 \usepackage{pdfpages}
-\usepackage{graphicx}
+\usepackage{graphicx, wrapfig, lipsum}
 
 % schöne Tabellen
 \usepackage{booktabs}
