--- a/v106/content/diskussion.tex
+++ b/v106/content/diskussion.tex
@@ -17,7 +17,8 @@
     \bottomrule
     \end{tabular}
 \end{table}
-
+Zuerst wird geprüft, ob die beiden Einzelpendel auch annäherd identisch schwingen. Für die Länge $l_1$ ergibt sich eine prozentuale Abweichung von $\Delta T_{1} = 0.05\%$ und für $l_2$ ergibt sich 
+$\Delta T_{2} = 0.1\%$ zueinander. Dies ist ein Indiz dafür, dass die Pendel auf sehr ähnliche Längen eingestellt sind.
 
 Zunächst wird die gleichsinnige Schwingung diskutiert. Bei diesen Messungen ergibt sich für $l_1$ eine relative Abweichung 
 $\symup{\Delta}\omega_{+} = 12.8\%$ vom Theoriewert. Diese liegt nicht im Fehlerbereich des gemessenen Wertes und kann durch die Überlänge des Pendels entstehen, da die Masse sehr
@@ -25,8 +26,10 @@ weit oben aufgehängt ist (siehe \autoref{fig:Aufbau2}).\\ Für die Massenlage $
 liegt im Rahmen des errechneten Fehlers und ist somit qualitativ gut, was zu erwarten war, da die Masse hier sehr weit unten aufgehängt wurde.
 
 
-Betrachtet man die Federkonstante, fällt auf, dass diese für die unterschiedlichen Längen einen anderen Wert ergibt. Dies ergibt sich, da man die Federkonstante aus den experimentell
-bestimmten, fehlerbehafteten Werten errechnen soll. In Wahrheit sollte die Federkonstante bei beiden Messungen jedoch gleich sein, da auch die gleiche Feder 
+Bei Betrachtung der Federkonstante, fällt auf, dass diese für die unterschiedlichen Längen einen anderen Wert ergibt. Bei der ersten Messung ergibt sie sich zu $K_1 = (0.180 ± 0.004)$ und bei
+der zweiten zu $K_2 = (0.083 ± 0.004)$. Dabei weichen $K_1$ und $K_2$ circa um den Faktor 2 voneinander ab.
+Dies ergibt sich, da die Federkonstante aus den experimentell
+bestimmten, fehlerbehafteten Werten errechnet werden soll. In Wahrheit sollte die Federkonstante bei beiden Messungen jedoch gleich sein, da auch die gleiche Feder 
 genutzt wurde. Dies führt dazu, dass die Theoriewerte, die mittels der Federkonstante bestimmt wurden, zweifelhaft sind.
 
 Zur gegensinnigen Schwingung der Länge $l_1$ lässt sich eine Abweichung von $\symup{\Delta}\omega_{-} = 2.73\%$ der Messung zum Theoriewert bestimmen. 
@@ -36,7 +39,7 @@ Mögliche Gründe für diese Abweichung sind am Ende des Abschnitts aufgelistet.
 
 Die Schwebungsfrequenz weicht für beide Längen um über 800\% ab. Dies hat den Grund, dass sich der Theoriewert der Schwebungsfrequenzen aus der Differenz 
 von $\omega_-$ und $\omega_+$ zusammensetzt, die beide bereits gröbere Abweichungen zu den jeweiligen Theoriewerten vorweisen. 
-Berechnet man hingegen aus den experimentell bestimmen Werten $\omega_-$ und $\omega_+$ die Schwebungsfrequenzen, 
+Werden die Schwebungsfrequenzen  hingegen aus den experimentell bestimmen Werten $\omega_-$ und $\omega_+$ berechnet, 
 ergeben sich sehr geringe relative Abweichungen von $\symup{\Delta}\omega_{s} = 0.02\%$ für $l_1$ und $\symup{\Delta}\omega_{s} = 3.31\%$ für $l_2$. 
 
 Allgemein liegen in diesem Experiment einige potentielle Fehlerquellen vor. Durch händische Auslenkung ist es nicht möglich beide Pendel gleichmäßig auszulenken und sich
