--- a/v106/content/durchfuehrung.tex
+++ b/v106/content/durchfuehrung.tex
@@ -1,12 +1,13 @@
 \section{Durchführung}
 \label{sec:Durchführung}
-In diesem Versuch werden alle untersuchten Schwing- und Schwebedauern für zwei unterschiedliche Pendellängen bestimmt. Dies kann durch unterschiedliche Aufhängungen der Masse am 
+In diesem Versuch werden alle untersuchten Schwingungs- und Schwebedauern für zwei unterschiedliche Pendellängen bestimmt. Dies kann durch unterschiedliche Aufhängungen der Masse am 
 Pendel realisiert werden, da die angehängte Masse sehr viel Größer ist als die überstehende Masse des Metallstabes (siehe \autoref{fig:Aufbau1}).
-Die Schwing- und Schwebedauern werden für verschiedene Arten von Schwingungen gemessen. Vorbereitent dazu wird zunächst überlegt, ob es sich bei diesem Versuch um eine 
+Die Schwing- und Schwebedauern werden für verschiedene Arten von Schwingungen gemessen. Vorbereitend dazu wird zunächst überlegt, ob es sich bei diesem Versuch um eine 
 harmonische Schwingung handelt. Eine harmonische Schwingung muss durch  Sinus- und Kosinusfunktionen beschrieben werden können und es muss ein lineares Kraftgesetzt gelten.
 Außerdem muss die Energie erhalten sein. Die ersten beiden Bedingungen gelten für ein Pendel, wie es im Versuch genutzt wird. Aufgrund der kurzen Messdauern kann annähernde 
 Energieerhaltung angenommen werden. Um nun die Gleichungen aus \autoref{sec:Theorie} nutzen zu können, dürfen bei der Durchführung lediglich kleine Auslenkungen der Pendel 
-verwendet werden, also solche, bei denen die Kleinwinkelnäherung noch möglichst genau gilt. Dies ist bis zu einem Auslenkwinkel von circa $5\textdegree$ gegeben. 
+verwendet werden, also solche, bei denen die Kleinwinkelnäherung noch möglichst genau gilt. Dies ist bis zu einem Auslenkwinkel von circa $5\textdegree$ gegeben. Bei einer 
+Pendellänge von $70\:\unit{\centi\metre}$ ergibt sich daher eine maximale Auslenkung von $6.1\:\unit{\centi\metre}$.
 
 
 Für diesen Versuch benötigt man zwei identische Pendel (siehe \autoref{fig:Aufbau1}), welche durch eine Feder gekoppelt werden können (siehe \autoref{fig:Aufbau2}).
