--- a/v106/content/theorie.tex
+++ b/v106/content/theorie.tex
@@ -27,8 +27,8 @@ mit speziellen Anfangsbedingungen unterschieden, die im Folgenden diskutiert wer
 
 \begin{itemize}
     \item \textbf{Gleichsinnige Schwingung:} $\alpha_1 = \alpha_2$ \\
-    Bei der gleichsinnigen Schwingung (\autoref{fig:Gleichsinnig}) werden beide Pendel um den gleichen Winkel $\alpha_1 = \alpha_2$ ausgelenkt. Die Pendel schwingen nun im Takt und beeinflussen sich nicht.
-    Es wird also keine Kraft über die Feder übertragen. Die Schwingungsfrequenz entspricht der eines einzelnen Pendels (vgl. \autoref{eqn:omega}) und wird mit $\omega_+$ bezeichnet.
+    Bei der gleichsinnigen Schwingung, wie in \autoref{fig:Gleichsinnig} dargestellt, werden beide Pendel um den gleichen Winkel $\alpha_1 = \alpha_2$ ausgelenkt. Die Pendel schwingen nun im Takt und beeinflussen sich nicht.
+    Es wird also keine Kraft über die Feder übertragen. Die Schwingungsfrequenz entspricht der eines einzelnen Pendels (vgl. GLeichung \eqref{eqn:omega}) und wird mit $\omega_+$ bezeichnet.
 
     \item \textbf{Gegensinnige Schwingung:} $\alpha_1 = -\alpha_2$ \\
     Bei dieser Schwingungsvariante (\autoref{fig:Gegensinnig}) werden die Pendel um den gleichen Winkel in entgegengesetzte Richtungen ausgelenkt. Über die Feder wirken nun betragsmäßig gleiche,
