--- a/v106/content/auswertung.tex
+++ b/v106/content/auswertung.tex
@@ -1,7 +1,7 @@
 \section{Auswertung}
 \label{sec:Auswertung}
-Im Folgenden werden alle zu untersuchenden Werte für beide Pendellängen bestimmt. In der ersten Messung wurde die Pendellänge auf $(28.4\pm 0.1)\unit{\centi\metre}$ eingestellt. 
-Für den zweiten Messdurchgang wurde die Länge auf $(78.4\pm 0.1)\unit{\centi\metre}$ geändert. Den Tabellen \ref{tab:Mess1} und \ref{tab:Mess2} können sämtliche Messwerte für die
+Im Folgenden werden alle zu untersuchenden Werte für beide Pendellängen bestimmt. In der ersten Messung wurde die Pendellänge auf $(28.4\pm 0.1)\:\unit{\centi\metre}$ eingestellt. 
+Für den zweiten Messdurchgang wurde die Länge auf $(78.4\pm 0.1)\:\unit{\centi\metre}$ geändert. Den Tabellen \ref{tab:Mess1} und \ref{tab:Mess2} können sämtliche Messwerte für die
 Schwingungs- und Schwebungsdauern entnommen werden. Dabei ist darauf zu achten, dass bis zu fünf Periodendauern gemessen wurden, was bei der Mittelwertbildung berücksichtigt werden muss.
 
 \begin{table}
@@ -74,9 +74,9 @@ der Kreisfrequenz, der sich aus der Gaußschen Fehlerfortpflanzung ergibt.
 Die Schwingungsdauern der Einzelpendel und der gleichsinnigen Schwingung können zusammen betrachtet werden, da die Kopplungsfeder bei der gleichsinnigen Schwingung 
 keinen Einfluss auf die Dynamik hat. Gemessen wurden die Schwingungsdauern $T_l, T_r$ und $T_+$ aus \autoref{tab:Mess1} und \autoref{tab:Mess2}.
 Der Index $l$ beschreibt jeweils das linke Pendel, $r$ bezeichnet das rechte Pendel. Zu den Längen $l_1$ und $l_2$ lassen sich die 
-theoretisch vorhergesagten Frequenzen der Pendel errechnen. Mit \autoref{eqn:omega} ergeben sich die theoretischen Frequenzen $\omega_{+1\text{, Theorie}} = (5.87\pm 0.01)\unit{\hertz}$ und 
-$\omega_{+2\text{, Theorie}} = (3.537\pm 0.002)\unit{\hertz}$. Aus den gemessenen Werten wird zunächst der Mittelwert gebildet. Die Fehler des Mittelwertes ergeben sich nach \autoref{eqn:MWFehler}.
-Daraus folgen die fehlerbehafteten Schwingungsdauern $\overline{T_l}$, $\overline{T_r}$ und $\overline{T_+}$ für beide Pendellängen. Diese kann man durch \autoref{eqn:omega} in 
+theoretisch vorhergesagten Frequenzen der Pendel errechnen. Mit Gleichung \eqref{eqn:omega} ergeben sich die theoretischen Frequenzen $\omega_{+1\text{, Theorie}} = (5.87\pm 0.01)\:\unit{\hertz}$ und 
+$\omega_{+2\text{, Theorie}} = (3.537\pm 0.002)\:\unit{\hertz}$. Aus den gemessenen Werten wird zunächst der Mittelwert gebildet. Die Fehler des Mittelwertes ergeben sich nach Gleichung \eqref{eqn:MWFehler}.
+Daraus folgen die fehlerbehafteten Schwingungsdauern $\overline{T_l}$, $\overline{T_r}$ und $\overline{T_+}$ für beide Pendellängen. Diese kann man durch Gleichung \eqref{eqn:omega} in 
 die zugehörigen Frequenzen überführen.
 \begin{table}
     \centering
@@ -98,7 +98,7 @@ die zugehörigen Frequenzen überführen.
 
 \subsection{Gegensinnige Schwingung}
 \label{subsec:Gegensinnig}
-Die Theoriewerte der Frequenzen $\omega_-$ der gegensinnigen Schwingung lassen sich mittels \autoref{eqn:omega_Gegensinnig} berechnen. Dabei wurde für die Kopplungskonstante $K$ 
+Die Theoriewerte der Frequenzen $\omega_-$ der gegensinnigen Schwingung lassen sich mittels Gleichung \eqref{eqn:omega_Gegensinnig} berechnen. Dabei wurde für die Kopplungskonstante $K$ 
 der experimentell ermittelte Wert eingestzt. Es folgt mit der gaußschen Fehlerfortpflanzung
 \begin{equation*}
     \label{eqn:DeltaOmegaMinus}
@@ -128,7 +128,7 @@ Die Unsicherheit des Wertes ergibt sich zu
     \label{eqn:DeltaK}
     \symup{\Delta}K = \frac{4T_+T_-}{(T_+^2 + T_-^2)^2} \cdot \sqrt{T_-^2 \, \symup{\Delta}T_+^2 + T_+^2 \, \symup{\Delta}T_-^2}.
 \end{equation*}
-Damit folgen die beiden Werte für die Federkonstanten $K_1 = 0.180 \pm 0.004$, $K_2 = 0.083 \pm 0.004$, die bereits zur Berechnung der Theoriewerte für $\omega_-$ verwendet wurden.
+Damit folgen die beiden Werte für die Federkonstanten $K_1 = (0.180 \pm 0.004)$, $K_2 = (0.083 \pm 0.004)$, die bereits zur Berechnung der Theoriewerte für $\omega_-$ verwendet wurden.
 
 \subsection{Gekoppelte Schwingung / Schwebung}
 \label{subsec:Schwebung}
